# published_works

./: .cursorignore  .dockerignore  .gcloudignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  INTER_SERVICE_COMMUNICATION.md  README.md  THREE_JS_TO_RUST_ANIMATION_MIGRATION.md  VISUALIZATION_README.md  allow-invalid.yaml  allowlisted.cert  allowlisted.key  angular.json  build_and_run.sh  check_ssl.py  client.cert  client.config  client.csr  client.key  cloudbuild.yaml  dev_server.sh  direct-ws-test.html  example.cnf  gcloud_cors.js  int.cert  int.key  int.req  lb-config.yaml  mtls_target_proxy.yaml  pyproject.toml  requirements.txt  root.cert  root.key  server_tls_policy.yaml  start-backend.sh  start-dev-servers.sh  start-frontend.sh  (+10 more)
.claude/: settings.local.json
.claude/agents/: gestalt-guardian.md
backend/: build_rust.py  config.py  export_gpu_renderer_format.py  main.py  main_clean.py  models.py  pyproject.toml  rust_linker.sh  test_cleaned_solver.py  test_websocket_client.py
backend/api/: routes.py
backend/maze_generation_ts/: maze-generator-wrapper.js  maze-generator.service.ts  maze-generator.ts  package-lock.json  package.json  tsconfig.json
backend/middleware/: __init__.py  fastapi_middleware.py
backend/redis_cache/: cache.py
backend/rust/: Cargo.toml  build.rs  build_with_python.sh  pyproject.toml  rust_linker.sh
backend/rust/src/: lib.rs  rust_maze_solver.rs
backend/solver/: maze_solver.py
backend/utils/: __init__.py  gcs_utils.py
backend/visualizer/: graph_visualizer.py
frontend/: README.md  angular.json  package-lock.json  package.json  serve_test.py  styles.scss  tsconfig.app.json  tsconfig.json  tsconfig.server.json  websocket-test.html
frontend/src/: errortemplate.html  index.html  main.server.ts  main.ts  server.ts  typings.d.ts
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.server.ts  app.config.ts  bold-name.pipe.spec.ts  bold-name.pipe.ts
frontend/src/app/animations/: animation.lineTextHoverEffect.scss  animation.lineTextHoverEffect.ts  animation_slowShake.scss
frontend/src/app/hex-maze/: hex-maze.component.ts  maze-api.service.ts  maze-generator.service.ts  maze-solver.service.ts  maze-worker.worker.ts
frontend/src/app/hex-maze/components/: hex-maze.component.html  hex-maze.component.scss  hex-maze.component.spec.ts  hex-maze.component.ts  maze-3d.component.ts
frontend/src/app/hex-maze/services/: animation-interfaces.ts  animation-manager.ts  camera-animator.ts  image-display-manager.ts  lighting-animator.ts  main_animation.ts  maze-api.service.ts  maze-generator.service.ts  maze-scene-manager.ts  maze-solver.service.ts  maze_animator.service.ts  path-animator.ts  pathTracing_webgpu.service.ts  von-grid.service.ts
frontend/src/app/hex-maze/services/shaders/: display.wgsl  pathTracing.wgsl  shader-loader.ts
frontend/src/app/hex-maze/threeJs_hex/: maze-3d.component.ts  maze_animator.service.ts  new_maze_generator.ts  new_maze_solver.ts
frontend/src/app/modal/: modal.component.html  modal.component.scss  modal.component.ts
frontend/src/app/simple-three/: simple-three.component.ts
frontend/src/assets/: test.html  websocket-test.html
frontend/src/assets/js/hex-grid/: index.d.ts  index.js
frontend/src/assets/js/hex-grid/lib/: OrbitControls.js
frontend/src/assets/js/hex-grid/src/: vongrid.bundled.js
frontend/src/assets/material_textures/: loadingTextures.ts
frontend/src/assets/shaders/: display.wgsl  pathTracing.wgsl  shader-bindings.ts  shader-loader.ts  webgpu-utils.ts  wgsl.d.ts
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/types/: webgpu-renderer.d.ts
frontend/ssl/: server.crt  server.key
gpu_renderer/: Cargo.toml  Dockerfile  Dockerfile.hybrid  MATERIAL_LOADING_GUIDE.md  README_DEPLOYMENT.md  deploy.sh  final-deploy.sh
gpu_renderer/.cargo/: Cargo.toml
gpu_renderer/examples/: material_loader_demo.rs
gpu_renderer/src/: animated_renderer.rs  concurrent_renderer.rs  error_handling.rs  http_server.rs  lib.rs  main.rs  material_loader.rs  optimized_renderer.rs  performance_optimizations.rs  test_maze.json  types.rs
gpu_renderer/src/animation/: camera_animator.rs  lighting_animator.rs  mod.rs  orchestrator.rs  path_animator.rs  tween.rs
gpu_renderer/src/shaders/: display.wgsl  gradient_test.wgsl  pathTracing.wgsl  pathTracing_animated.wgsl
redis_cache/: __init__.py  client.py  config.py  manager.py  maze_cache.py  middleware.py  models.py  rate_limiting.py  setup.py
simple_gpu_server/: Cargo.toml
simple_gpu_server/src/: main.rs
webgpu_resources/: test_maze_input_1760501934902.json  test_maze_input_1760641248414.json  test_maze_input_1760641368318.json  test_maze_input_1760641425466.json  test_maze_input_1760647256882.json
