[workspace]
members = [
    "backend/rust",
    "gpu_renderer"
]
resolver = "2"

# GPU Renderer profiles (moved from package Cargo.toml)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.release-debug]
inherits = "release"
debug = true

[profile.bench]
inherits = "release"
debug = true
lto = false

[profile.dev-gpu]
inherits = "dev"
opt-level = 2

[profile.t4]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1 