[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maze_solver_app"
version = "0.1.0"
description = "Maze solver application"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "pydantic",
    "networkx",
    "matplotlib",
    "rust_maze_solver"
]

[tool.setuptools]
packages = ["backend"]