# backend/rust/Cargo.toml
[package]
name = "rust_maze_solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_maze_solver"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
rayon = "1.8"
lazy_static = "1.4"
heapless = "0.8.0"
nohash-hasher = "0.2.0"
hash32 = "0.3.1"
rand = "0.9"