[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rust_maze_solver"
version = "0.1.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "fastapi",
    "networkx == 3.4.2",
    "matplotlib",
    "joblib",
]


[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "maze_solver"
binding = "pyo3"
